# Vikopti

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyproject.toml
examples/: example_constrained.py  example_multimodal.py  example_nvar.py  example_simple.py
tests/: test_algo.py  test_crossovers.py  test_fitness.py  test_logger.py  test_mutations.py  test_results.py  test_samples.py
vikopti/: __init__.py  config.py  fitness.py  logger.py  problem.py  results.py  utils.py  vikga.py
vikopti/operators/: __init__.py  crossovers.py  fitness.py  mutations.py  samples.py
vikopti/problems/: __init__.py  beam.py  f1.py  glc.py  rosen.py  schwefel.py  sphere.py
